* (bug 11404) Provide name of exception caught in error code field of internal api 
  error messages.
* (bug 11534) rvendid doesn't work
* Fixed rvlimit of the revisions query to only enforce the lower query limit if
  revision content is requested.
* Include svn revision number (if install is checked-out from svn) in siteinfo query.

=== Languages updated in 1.12 ===

* Amharic (am) (new)
* Arabic (ar)
* Mapudungun (arn) (new)
* Asturian (ast)
* Samogitian (bat-smg)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bulgarian (bg)
* Bislama (bi) (new)
* Bengali (bn)
* Bishnupriya Manipuri (bpy)
* Breton (br)
* Catalan (ca)
* Czech (cs)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Lower Sorbian (dsb) (new)
* Ewe (ee) (new)
* Greek (el)
* Spanish (es)
* Extremaduran (ext)
* Finnish (fi)
* Persian (fa)
* Võro (fiu-vro)
* Faroese (fo)
* French (fr)
* Cajun French (frc)
* Franco-Provençal (frp)
* Frisian (fy)
* Irish (ga)
* Gön-gnŷ (gan) (new)
* Galician (gl)
* Ancient Greek (grc) (new)
* Hakka (hak)
* Hebrew (he)
* Croatian (hr)
* Upper Sorbian (hsb)
* Armenian (hy)
* Indonesian (id)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Kazakh (kk)
* Korean (ko)
* Latin (la)
* Limbugian (li)
* Lithuanian (lt)
* Malay (ms)
* Nahuatl (nah)
* Low Saxon (nds)
* Dutch Low Saxon (nds-nl)
* Dutch (nl)
* Norwegian (no)
* Portugese (pt)
* Romanian (ro)
* Russian (ru)
* Sakha (sah)
* Sicilian (scn)
* Sassarese (sdc) (new)
* Seri (sei) (new)
* Tachelhit (shi)
* Slovak (sk)
* Serbian (Cyrillic) (sr-ec)
* Sundanese (su)
* Swedish (sv)
* Tamil (ta)
* Tetun (tet) (new)
* Tagalog (tl) (new)
* Walloon (wa)
* Yiddish (yi)
* Cantonese (yue)
* Zhuang (za)
* Zealandic (zea)
* Old Chinese/Late Time Chinese (zh-classical)
* Chinese (Simplified) (zh-hans)
* Chinese (Traditional) (zh-hant)

== Compatibility ==

MediaWiki 1.12 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.
