@@ -108,6 +108,8 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Fixed rvlimit of the revisions query to only enforce the lower query limit if
   revision content is requested.
 * Include svn revision number (if install is checked-out from svn) in siteinfo query.
+* (bug 11173) Allow limited wikicode rendering via api.php
+* (bug 11572) API should provide interface for expanding templates
 
 === Languages updated in 1.12 ===
 
